# api/openapi.yaml
@@ -18,6 +18,8 @@ externalDocs:
 servers:
 - url: http://localhost:8080/v2
   description: สำหรับ Production server (ไว้ Generate)
+- url: http://localhost:61/v2
+  description: สำหรับ Dev server (เครื่องตัวเอง Player)
 - url: http://128.199.216.219:61/V2/
   description: สำหรับ Test play server
 - url: http://128.199.216.219:62/V2/
@@ -162,6 +164,30 @@ paths:
       security:
       - api_key: []
       x-swagger-router-controller: Player
+  /player/list:
+    get:
+      tags:
+      - agent
+      - owner
+      summary: List Player
+      description: List Player.
+      operationId: listPlayer
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PlayerModel'
+                x-content-type: application/json
+        "400":
+          description: Invalid tag value
+          content: {}
+      security:
+      - api_key: []
+      x-swagger-router-controller: Agent
   /agent/login:
     post:
       tags:
@@ -315,8 +341,8 @@ paths:
       security:
       - api_key: []
       x-swagger-router-controller: Agent
-  /agent/payment:
-    get:
+  /agent/paymentlist:
+    post:
       tags:
       - agent
       - owner
@@ -326,7 +352,8 @@ paths:
         "405":
           description: Invalid input
           content: {}
-      x-swagger-router-controller: Agent
+      x-swagger-router-controller: Owner
+  /agent/payment:
     put:
       tags:
       - agent
@@ -358,6 +385,8 @@ paths:
             schema:
               $ref: '#/components/schemas/PaymentModel'
         required: true
+      security:
+      - bearerAuth: []
       responses:
         "405":
           description: Invalid input
@@ -394,9 +423,7 @@ paths:
         "404":
           description: Pet not found
           content: {}
-      security:
-      - api_key: []
-      x-swagger-router-controller: Agent
+      x-swagger-router-controller: Owner
   /agent/player/payment:
     get:
       tags:
@@ -818,15 +845,18 @@ components:
         agentId:
           type: integer
           format: int64
-        Amount:
+        amount:
           type: number
-        Status:
+        type:
+          type: string
+        status:
           type: string
       example:
-        Status: Status
-        agentId: 6
-        Amount: 1.46581298050294517310021547018550336360931396484375
         id: 0
+        agentId: 6
+        amount: 1.46581298050294517310021547018550336360931396484375
+        type: "0"
+        status: "0"
     TransferModel:
       type: object
       properties:
@@ -877,6 +907,10 @@ components:
       name: api_key
       in: header
     authorization:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+    bearerAuth:            # arbitrary name for the security scheme
       type: http
       scheme: bearer
       bearerFormat: JWT
