# controller_owner/Owner.js
@@ -73,6 +73,16 @@ module.exports.listagentPaymentRequest = function listagentPaymentRequest (req, 
     });
 };
 
+module.exports.listPlayer = function listPlayer (req, res, next) {
+  Agent.listPlayer()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.listplayerPaymentRequest = function listplayerPaymentRequest (req, res, next) {
   Owner.listplayerPaymentRequest()
     .then(function (response) {
